[project]
name = "flybuddy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "plotly>=6.0.1",
    "streamlit>=1.44.1",
    "streamlit-geolocation>=0.0.10",
    "streamlit-javascript>=0.1.5",
    "streamlit-js-eval>=0.1.7",
]
